--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 /* General Styles */
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f4f4f4;
+  /* background-color: #f4f4f4; */
+  background-image: url("./img/background.jpg");
+  background-repeat: repeat;
   color: #333;
   margin: 0;
   padding: 0;
@@ -19,10 +21,10 @@ body {
 }
 
 h4 {
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
   color: #2c3e50;
   text-align: center;
-  font-size: 1.75rem;
+  font-size: 2rem;
 }
 
 /* Form Styles */
@@ -41,7 +43,7 @@ form {
   border-radius: 8px;
   padding: 0.75rem;
   width: 100%; /* Maintain original width */
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   transition: border-color 0.3s, box-shadow 0.3s;
 }
 
@@ -54,13 +56,11 @@ form {
 .input-field label {
   color: #555;
   font-weight: bold;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
 }
 
-.input-field label.required::after {
-  content: "*";
+span {
   color: red;
-  margin-left: 0.5rem;
 }
 
 /* Button Styles */
@@ -119,7 +119,7 @@ input[type="email"],
 input[type="tel"],
 input[type="url"],
 select {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   line-height: 1.6;
 }
 
