--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.maateen.me/charukola-ultra-light/font.css");
 /* General Styles */
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -24,7 +25,9 @@ h4 {
   margin-bottom: 2rem;
   color: #2c3e50;
   text-align: center;
-  font-size: 2rem;
+  font-size: 2.5rem;
+  font-family: "CharukolaUltraLight", Arial, sans-serif !important;
+  font-weight: 700;
 }
 
 /* Form Styles */
