--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ body {
   margin: 0;
   padding: 0;
 }
+.banner img {
+  width: 90%;
+  height: auto;
+  display: block;
+  margin: auto;
+  opacity: 0.8;
+}
 
 .container {
   margin-top: 2rem;
@@ -77,6 +84,7 @@ span {
   cursor: pointer;
   font-size: 1.5rem;
   transition: background-color 0.3s, transform 0.2s;
+  margin: 2rem 0rem;
 }
 
 .btn:hover {
@@ -138,4 +146,48 @@ select {
 
 .pujaTypeFiled {
   margin-top: -0.8rem !important;
+}
+/* Footer Styles */
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 1rem 0;
+  position: relative;
+  width: 90%;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
+.footer-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.footer-content p {
+  margin: 0.5rem 0;
+  font-size: 0.9rem;
+}
+
+.footer-content .author {
+  font-style: italic;
+  color: #f39c12;
+}
+/* Responsive Design */
+@media (min-width: 600px) {
+  .footer-content {
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: left;
+  }
 }
