--- a/style.css
+++ b/style.css
@@ -3,18 +3,17 @@
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   /* background-color: #f4f4f4; */
-  background-image: url("./img/background.jpg");
+  background-image: url("./img/background_img.jpg");
   background-repeat: repeat;
   color: #333;
   margin: 0;
   padding: 0;
 }
 .banner img {
-  width: 90%;
-  height: auto;
+  width: 100%;
+
   display: block;
   margin: auto;
-  opacity: 0.8;
 }
 
 .container {
@@ -154,7 +153,7 @@ footer {
   text-align: center;
   padding: 1rem 0;
   position: relative;
-  width: 90%;
+  width: 100%;
   bottom: 0;
   left: 0;
   margin: auto;
