--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
   display: block;
   margin: auto;
 }
-
 .container {
   margin-top: 2rem;
   padding: 2rem;
@@ -30,11 +29,12 @@ body {
 
 h4 {
   margin-bottom: 2rem;
-  color: #2c3e50;
+  color: #00255d;
   text-align: center;
   font-size: 2.5rem;
   font-family: "CharukolaUltraLight", Arial, sans-serif !important;
-  font-weight: 700;
+  font-weight: 800;
+  text-decoration: underline;
 }
 
 /* Form Styles */
@@ -52,11 +52,10 @@ form {
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 0.75rem;
-  width: 100%; /* Maintain original width */
+  /* width: 100%; Maintain original width */
   font-size: 1.3rem;
   transition: border-color 0.3s, box-shadow 0.3s;
 }
-
 .input-field input:focus,
 .input-field select:focus {
   border-color: #007bff;
@@ -68,7 +67,6 @@ form {
   font-weight: bold;
   font-size: 1.3rem;
 }
-
 span {
   color: red;
 }
@@ -96,6 +94,10 @@ span {
 @media only screen and (max-width: 600px) {
   .input-field {
     width: 100%; /* Maintain original width */
+  }
+  input-field input,
+  .input-field select {
+    font-size: 1.5rem;
   }
 
   .btn {
