--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h4 {
   color: #00255d;
   text-align: center;
   font-size: 2.5rem;
-  font-family: "CharukolaUltraLight", Arial, sans-serif !important;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 800;
   text-decoration: underline;
 }
@@ -105,7 +105,7 @@ span {
   }
   h4 {
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
   }
 }
 
